packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__036_mixed_topo_weighted_seed_exposes_linked_entities.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 036_mixed_topo_weighted_seed_exposes_linked_entities [mixed_topology]: weighted seed exposes linked entities"
expression: result
info:
  id: 036_mixed_topo_weighted_seed_exposes_linked_entities
  name: weighted seed exposes linked entities
  category: mixed_topology
  description: mixed_topology scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/036_mixed_topo_weighted_seed_exposes_linked_entities/scenario.toml
---
{
  "category": "mixed_topology",
  "files": [],
  "scenario_id": "036_mixed_topo_weighted_seed_exposes_linked_entities",
  "status": "validated"
}
