packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__039_refresh_incremental_update_and_delete.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 039_refresh_incremental_update_and_delete [refresh]: incremental update and delete"
expression: result
info:
  id: 039_refresh_incremental_update_and_delete
  name: incremental update and delete
  category: refresh
  description: refresh scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/039_refresh_incremental_update_and_delete/scenario.toml
---
{
  "category": "refresh",
  "files": [],
  "scenario_id": "039_refresh_incremental_update_and_delete",
  "status": "validated"
}
