packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__040_refresh_threshold_modes.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 040_refresh_threshold_modes [refresh]: threshold modes"
expression: result
info:
  id: 040_refresh_threshold_modes
  name: threshold modes
  category: refresh
  description: refresh scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/040_refresh_threshold_modes/scenario.toml
---
{
  "category": "refresh",
  "files": [],
  "scenario_id": "040_refresh_threshold_modes",
  "status": "validated"
}
