packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__041_search_filt_link_to_and_linked_by.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 041_search_filt_link_to_and_linked_by [search_filters]: link to and linked by"
expression: result
info:
  id: 041_search_filt_link_to_and_linked_by
  name: link to and linked by
  category: search_filters
  description: search_filters scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/041_search_filt_link_to_and_linked_by/scenario.toml
---
{
  "category": "search_filters",
  "files": [],
  "scenario_id": "041_search_filt_link_to_and_linked_by",
  "status": "validated"
}
