packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__042_search_filt_mentions_orphan_tagless_missing_backlink.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 042_search_filt_mentions_orphan_tagless_missing_backlink [search_filters]: mentions orphan tagless missing backlink"
expression: result
info:
  id: 042_search_filt_mentions_orphan_tagless_missing_backlink
  name: mentions orphan tagless missing backlink
  category: search_filters
  description: search_filters scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/042_search_filt_mentions_orphan_tagless_missing_backlink/scenario.toml
---
{
  "category": "search_filters",
  "files": [],
  "scenario_id": "042_search_filt_mentions_orphan_tagless_missing_backlink",
  "status": "validated"
}
