packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__044_search_filt_related_with_distance.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 044_search_filt_related_with_distance [search_filters]: related with distance"
expression: result
info:
  id: 044_search_filt_related_with_distance
  name: related with distance
  category: search_filters
  description: search_filters scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/044_search_filt_related_with_distance/scenario.toml
---
{
  "category": "search_filters",
  "files": [],
  "scenario_id": "044_search_filt_related_with_distance",
  "status": "validated"
}
