packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__046_search_strat_exact_strategy.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 046_search_strat_exact_strategy [search_match_strategies]: exact strategy"
expression: result
info:
  id: 046_search_strat_exact_strategy
  name: exact strategy
  category: search_match_strategies
  description: search_match_strategies scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/046_search_strat_exact_strategy/scenario.toml
---
{
  "category": "search_match_strategies",
  "files": [],
  "scenario_id": "046_search_strat_exact_strategy",
  "status": "validated"
}
