packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__047_search_strat_parse_path_fuzzy.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 047_search_strat_parse_path_fuzzy [search_match_strategies]: parse path fuzzy"
expression: result
info:
  id: 047_search_strat_parse_path_fuzzy
  name: parse path fuzzy
  category: search_match_strategies
  description: search_match_strategies scenario (no input)
  input_type: none
  input_paths: []
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/047_search_strat_parse_path_fuzzy/scenario.toml
---
{
  "category": "search_match_strategies",
  "files": [],
  "scenario_id": "047_search_strat_parse_path_fuzzy",
  "status": "no_input"
}
